k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: techchallenge2-app
  template:
    metadata:
      labels:
        app: techchallenge2-app
    spec:
      containers:
        - name: techchallenge2-app
          image: 258083582548.dkr.ecr.us-east-2.amazonaws.com/techchallenge2-app:f22fa0d524d97dd687e18990bfcbd0650b51f6b2
          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
