k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge2-app-service
  namespace: techchallenge2
spec:
  type: ClusterIP
  selector:
    app: techchallenge2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
